mywork/force-app/main/default/objects/Instances__c/Instances__c.object-meta.xml
<CustomObject>
    <label>Instance</label>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>