mywork/force-app/main/default/objects/Instances__c/fields/Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>Custom_Domain__c</fullName>
    <description>Used for instances with "My" domains such as "companyname.my.salesforce.com"</description>
    <inlineHelpText>Used for instances with "My" domains such as "companyname.my.salesforce.com"</inlineHelpText>
    <label>Custom Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>