mywork/force-app/main/default/objects/Instances__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <label>Instance Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>