mywork/force-app/main/default/objects/Instances__c/fields/Is_ALM_Instance__c.field-meta.xml
<CustomField>
    <fullName>Is_ALM_Instance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is the instance in which the ALM package is installed</inlineHelpText>
    <label>Is ALM Instance</label>
    <type>Checkbox</type>
</CustomField>