mywork/force-app/main/default/objects/Instances__c/fields/Rename_Lock_Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Rename_Lock_Expiration_Time__c</fullName>
    <inlineHelpText>The timestamp of the expiration of the renaming lock.</inlineHelpText>
    <label>Rename Lock Expiration Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>