mywork/force-app/main/default/objects/Instances__c/validationRules/Custom_Domain_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Domain_Length</fullName>
    <active>true</active>
    <description>Prevents the entering of long custom domain names</description>
    <errorConditionFormula>LEN(Custom_Domain__c) > 199</errorConditionFormula>
    <errorDisplayField>Custom_Domain__c</errorDisplayField>
    <errorMessage>Custom domain URLs must less be less than 200 characters.</errorMessage>
</ValidationRule>